--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <title>Loteca - Simulador de loteria</title>
 </head>
 <body>
+    <header>
+        <h1>Loteca</h1>
+        <h3>Simulador de Loteria</h3>
+    </header>
+
+    <div class="selecao">
+    <input type="number" id="num1" class="num">
+    <input type="number" id="num2" class="num">
+    <input type="number" id="num3" class="num">
+    <input type="number" id="num4" class="num">
+    <input type="number" id="num5" class="num">
+    <input type="number" id="num6" class="num">
+    </div>
+
+    <button>Sortear</button>
+
+    <div class="sorteio">
+        <h4>Numeros Sorteados:</h4>
+        <p id="sorteados"></p>
+    </div>
+
+    <div class="acertos">
+        <h4>Acertos</h4>
+        <p id="acertos"></p>
+    </div>
     
+    <footer>
+        <p>Desenvolvido por <a href="https://github.com/carloscacho">@carloscacho</a> </p>
+    </footer>
 </body>
 </html>
