--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     
     <footer>
-        <p>Desenvolvido por <a href="https://github.com/carloscacho">@carloscacho</a> </p>
+        <p>Desenvolvido por <a href="https://github.com/fabioramos-02">@fabioramos-02</a> </p>
     </footer>
 </body>
 </html>
