--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=_, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=_, initial-scale=1.0" />
+    <link rel="stylesheet" href="estilos.css" />
     <title>Loteca - Simulador de loteria</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Loteca</h1>
-        <h3>Simulador de Loteria</h3>
+      <h1>Loteca</h1>
+      <h3>Simulador de Loteria</h3>
     </header>
 
     <div class="selecao">
-    <input type="number" id="num1" class="num">
-    <input type="number" id="num2" class="num">
-    <input type="number" id="num3" class="num">
-    <input type="number" id="num4" class="num">
-    <input type="number" id="num5" class="num">
-    <input type="number" id="num6" class="num">
+      <input type="number" id="num1" class="num" />
+      <input type="number" id="num2" class="num" />
+      <input type="number" id="num3" class="num" />
+      <input type="number" id="num4" class="num" />
+      <input type="number" id="num5" class="num" />
+      <input type="number" id="num6" class="num" />
     </div>
 
-    <button>Sortear</button>
+    <div class="btnSort">
+      <button>Sortear</button>
+    </div>
 
     <div class="sorteio">
-        <h4>Numeros Sorteados:</h4>
-        <p id="sorteados"></p>
+      <h4>Numeros Sorteados:</h4>
+      <p id="sorteados"></p>
     </div>
 
     <div class="acertos">
-        <h4>Acertos</h4>
-        <p id="acertos"></p>
+      <h4>Acertos</h4>
+      <p id="acertos"></p>
     </div>
-    
+
     <footer>
-        <p>Desenvolvido por <a href="https://github.com/fabioramos-02">@fabioramos-02</a> </p>
+      <p>
+        Desenvolvido por
+        <a href="https://github.com/fabioramos-02">@fabioramos-02</a>
+      </p>
     </footer>
-</body>
+  </body>
 </html>
